statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-app-set
spec:
  serviceName: "hello-app"
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
          hostPort: 8080
