home-http-ingress.yaml
kind: Service
apiVersion: v1
metadata:
 name: home-http
spec:
 ports:
 - port: 80
   targetPort: 8080
---
kind: Endpoints
apiVersion: v1
metadata:
 name: home-http
subsets:
 - addresses:
     - ip: 192.168.10.1
   ports:
     - port: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-http
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: home.dyndns.evdev.me
    http:
      paths:
      - path: /
        backend:
          serviceName: home-http
          servicePort: 80
  tls:
  - hosts:
    - home.dyndns.evdev.me
    secretName: home-http-tls
