kubernetes-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes
  namespace: kube-system
spec:
  type: ExternalName
  externalName: kubernetes.default.svc.cluster.local
  ports:
  - port: 443
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: kubernetes.homelab.evdev.me
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes
          servicePort: 443
  tls:
  - hosts:
    - kubernetes.homelab.evdev.me
    secretName: kubernetes-tls
